# test-train-esrgan

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  run_training_commands.sh
notebooks/: Generating Training Scripts.ipynb  Inference.ipynb  Untitled.ipynb  Utils.ipynb  Weight Pruning.ipynb  Zipping up weights for download.ipynb  Zipping up weights or download.ipynb  log_file  session_config.yml
sagemaker/: .bronco.json  .dockerignore  .gitignore  Dockerfile  Dockerfilebk  run_training_commands.sh
sagemaker/notebooks/: Generating Training Scripts.ipynb  Investigating Data.ipynb  Untitled.ipynb  Utils.ipynb
sagemaker/src/: WeightPruner.py  inference.py  inferencev2.py  preprocess_data.py  train  train.py  trainbk  utils.py  utils_test.py
sagemaker/src/.ipynb_checkpoints/: Inference-checkpoint.ipynb
spotty/: .gitignore  spotty.yaml
spotty/src/: train
src/: WeightPruner.py  inferencev1.py
src/convert-weights-to-models/: .gitignore  Dockerfile
src/convert-weights-to-models/src/: convert.py
tests/: test_training.py
training/: test.ipynb  train.py  workflow.yml
