[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["Kevin Scott <151596+thekevinscott@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.8"
gradient = "^1.10.0"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
